# v2.mader.xyz

./: .env  .flaskenv  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  README.org  Rocket.toml  TODOs.wiki  config.json  docker-compose.yaml  entrypoint.sh  flaskapp.wsgi  local_mxyz_restart.py  local_mxyz_run.py  maderxyz.wsgi  main.py  requirements.txt  run.sh  rust-toolchain.toml  static  templates
FlaskApp/: __init__.py  config.py  db_config.py
_rework_01_old_js/maderxyz-backend/: Cargo.toml
_rework_01_old_js/maderxyz-backend/src/: main.rs
_rework_01_old_js/maderxyz-backend/static/: frontend-js  gol_tmp  js  media
_rework_01_old_js/maderxyz-backend/static/css/: base.css  comp_phys.css
_rework_01_old_js/maderxyz-backend/templates/: index.tera
_rework_01_old_js/maderxyz-backend/templates/sims/: 3body_moon.tera  ants.tera  base.tera  charge_interaction.tera  game_of_life.tera  game_of_life_wasm.tera  lorentz.tera  tatooine.tera  wasm.tera
maderxyz-backend/: Cargo.toml
maderxyz-backend/src/: main.rs
maderxyz-backend/static/: frontend  frontend-js  js
maderxyz-backend/templates/: base.tera
maderxyz-backend/templates/sims/: 3body_moon.tera  brownian_motion.tera  diffusion.tera  draw.tera  forest_fire.tera  mc_pi_darts.tera  quad_tree.tera  rock_paper_scissors.tera  single_pendulum.tera
maderxyz-chronos/: Cargo.toml
maderxyz-client/: Cargo.toml  README.org
maderxyz-client/src/: lib.rs
maderxyz-client/src/_old/: body.rs  quadtree.rs  simulation.rs  universe.rs
maderxyz-client/src/_old/_old/: body.rs  universe.rs
maderxyz-client/src/_old/cellular_automaton/: engine.rs  renderer.rs
maderxyz-client/src/_old/n_body_interaction/: mod.rs
maderxyz-client/src/_old/n_body_interaction/engine/: body.rs  mod.rs
maderxyz-client/src/_old/n_body_interaction/renderer/: mod.rs
maderxyz-client/src/simulation/: engine.rs  mod.rs  renderer.rs  renderer2.rs
maderxyz-client/src/simulation/cellular_automaton/: engine.rs  mod.rs  renderer.rs
maderxyz-client/src/simulation/n_body_interaction/: engine.rs  mod.rs  renderer.rs
maderxyz-client/src/utils/: dom.rs  math.rs  mod.rs  physics.rs
maderxyz-numerics/: Cargo.toml
maderxyz-numerics/src/: lib.rs
maderxyz-numerics/src/engine/: mod.rs
maderxyz-numerics/src/integrators/: euler_explicit.rs  euler_implicit.rs  mod.rs  runge_kutta_4.rs
maderxyz-numerics/src/integrators/field/: batch_wise.rs  entire.rs  mod.rs
maderxyz-numerics/src/integrators/object/: euler_explicit.rs  leap_frog.rs  mod.rs  runge_kutta_2.rs  verlet.rs
maderxyz-numerics/src/interactions/: mod.rs
maderxyz-numerics/src/interactions/field/: diffusion.rs  game_of_life.rs  mod.rs  spin_spin_interaction.rs
maderxyz-numerics/src/interactions/object/: coulomb.rs  coulomb_interaction.rs  lennard_jones.rs  mod.rs  newtonian_gravity.rs
maderxyz-numerics/src/renderer/: mod.rs
maderxyz-numerics/src/state/: field.rs  mod.rs  object_family.rs
maderxyz-numerics/src/state/field/: field_variant.rs  mod.rs  neighborhood_getter.rs  neighborhood_variant.rs
maderxyz-numerics/src/state/object_family/: mod.rs
maderxyz-server/: Cargo.toml  README.org
maderxyz-server/src/: main.rs
maderxyz-server/src/utils/: mod.rs
maderxyz-server/src/views/: mod.rs
maderxyz-server/src/views/_old/nbody_gravity/: moon.rs
maderxyz-server/src/views/index/: mod.rs  section.rs
maderxyz-server/src/views/simulations/: mod.rs
maderxyz-server/static/: main.js
maderxyz-server/static/css/: base.css  index.css  simulation.css
maderxyz-server/static/img/: thumbnails
maderxyz-server/static/js/: simulation.js
maderxyz-server/templates/: base.html.tera
maderxyz-server/templates/index/: index.html.tera  navgrid.html.tera
maderxyz-server/templates/simulations/: base.html.tera  cellular_automaton.html.tera  nbody.html.tera
maderxyz-server/templates/simulations/_old/: cellular_automaton.html.tera
maderxyz-server/templates/simulations/_old/nbody_gravity/: moon.html.tera
mxyz-engine/: Cargo.toml
mxyz-engine/src/: config.rs  engine.rs  lib.rs  setup.rs
mxyz-engine/src/boundary/field/: mod.rs  variant.rs
mxyz-engine/src/boundary/field/none/: mod.rs
mxyz-engine/src/boundary/field/periodic/: mod.rs
mxyz-engine/src/boundary/object/: mod.rs  variant.rs
mxyz-engine/src/boundary/object/none/: mod.rs
mxyz-engine/src/boundary/object/periodic/: mod.rs
mxyz-engine/src/config/: mod.rs
mxyz-engine/src/config/field/: mod.rs
mxyz-engine/src/config/obj_family/: mod.rs
mxyz-engine/src/integrator/: setup.rs
mxyz-engine/src/integrator/field/: mod.rs  variant.rs
mxyz-engine/src/integrator/field/cell_auto/: mod.rs
mxyz-engine/src/integrator/field/entire/: mod.rs
mxyz-engine/src/integrator/field/random_batch/: mod.rs
mxyz-engine/src/integrator/object/: mod.rs  variant.rs
mxyz-engine/src/integrator/object/euler/: explicit.rs  implicit.rs
mxyz-engine/src/integrator/object/leapfrog/: mod.rs
mxyz-engine/src/integrator/object/runge_kutta/: order_2.rs
mxyz-engine/src/integrator/object/verlet/: mod.rs
mxyz-engine/src/interaction/field/field/: ising.rs  mod.rs
mxyz-engine/src/interaction/field/object/: mod.rs
mxyz-engine/src/interaction/object/: mod.rs
mxyz-engine/src/interaction/object/field/: mod.rs
mxyz-engine/src/interaction/object/object/: mod.rs
mxyz-engine/src/state/: mod.rs
mxyz-engine/src/state/field/: mod.rs  neighborhood.rs  variant.rs
mxyz-engine/src/state/object/: attribute.rs  family.rs  mod.rs  neighborhood.rs  variant.rs
mxyz-engine/src/system/: mod.rs
mxyz-engine/src/system/field/: mod.rs
mxyz-engine/src/system/obj_family/: mod.rs
mxyz-utils/: Cargo.toml
mxyz-utils/src/: lib.rs
mxyz-utils/src/dom/: canvas.rs  mod.rs
src/mxyz-server/: Cargo.toml
src/mxyz-server/src/: lib.rs
src/mxyz-server/static/css/: base.css  comp_phys.css
src/mxyz-server/static/img/: thumbnails_
src/mxyz-server/static/js/: simulation.js
src/mxyz-server/templates/index/: base.html.tera  navgrid.html.tera
website/mxyz-client/: Cargo.toml  config.toml
website/mxyz-client/src/simulation/: config.rs
(+589 files in other folders)
