
[workspace]
    members = [
        "mxyz-server",
        "mxyz-client",
        "mxyz-database",
        "mxyz-numerics",
        "mxyz-chronos",
        "utils",
    ]

[profile.dev]
    opt-level = 0
    debug = true
    debug-assertions = true
    overflow-checks = true
    panic = 'unwind'
    incremental = true
    codegen-units = 256

[profile.release]
    opt-level = 3  # "s" ?
    debug = false
    debug-assertions = false
    overflow-checks = false
    panic = 'unwind'
    incremental = false
    codegen-units = 16

