
[workspace]
    members = [
        "mxyz-chronos",
        "mxyz-client",
        "mxyz-database",
        "mxyz-engine",
        "mxyz-physics",
        "mxyz-utils",
        "mxyz-server",
    ]

[profile.dev]
    opt-level = 0
    debug = true
    debug-assertions = true
    overflow-checks = true
    panic = 'unwind'
    incremental = true
    codegen-units = 256

[profile.release]
    opt-level = 3  # "s" ?
    debug = false
    debug-assertions = false
    overflow-checks = false
    panic = 'unwind'
    incremental = false
    codegen-units = 16

