[package]
name = "maderxyz-backend"
version = "0.1.0"
authors = ["Vincent C. Mader <vincent.mader@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}
rocket = "0.4.10"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["tera_templates", "serve"]

[dependencies.tera]
version = "1"
default-features = false
