[package]
    name = "maderxyz-chronos"
    version = "0.1.0"
    authors = ["Vincent C. Mader <vincent.mader@icloud.com>"]
    edition = "2018"

[lib]
    crate-type = ["cdylib"]

[dependencies]
    console_error_panic_hook = { version = "0.1.6", optional = true }

[features]
    default = ["console_error_panic_hook"]
