[package]
    name = "maderxyz-frontend"
    version = "0.1.0"
    authors = ["Vincent C. Mader <vincent.mader@icloud.com>"]
    edition = "2018"

[lib]
    crate-type = ["cdylib"]

[dependencies]
    console_error_panic_hook = { version = "0.1.6", optional = true }
    rand = "0.8.4"
    getrandom = { version = "0.2", features = ["js"] }
    wasm-bindgen = "0.2.78"
    js-sys = "0.3.51"

    # maderxyz-simulations = { path="../maderxyz-simulations" }

[dependencies.web-sys]
    version = "0.3.55"
    features = [
        'console',
        'Document',
        'Element',
        'HtmlElement',
        'Node',
        'Window',
        'CanvasRenderingContext2d',
        'CssStyleDeclaration',
        'EventTarget',
        'HtmlCanvasElement',
        'MouseEvent',
    ]

[features]
    default = ["console_error_panic_hook"]
