
[package]
    name = "maderxyz-numerics"
    version = "0.1.0"
    authors = ["Vincent C. Mader <vincent.mader@icloud.com>"]
    edition = "2018"

[dependencies]
    console_error_panic_hook = { version = "0.1.6", optional = true }
    rand = "0.8.4"
    getrandom = { version = "0.2", features = ["js"] }
    wasm-bindgen = "0.2.78"

[features]
    default = ["console_error_panic_hook"]

