[package]
    name = "maderxyz-server"
    version = "0.1.0"
    authors = ["Vincent C. Mader <vincent.mader@icloud.com>"]
    edition = "2018"

[dependencies]
    # maderxyz-simulations = { path="../maderxyz-simulations" }
    rocket = "0.5.0-rc.1"
    serde = {version = "1.0.130", features = ["derive"]}

[dependencies.rocket_dyn_templates]
    version = "0.1.0-rc.1"
    features = ["tera"]
