
[package]
    name = "mxyz-utils"
    version = "0.1.0"
    edition = "2018"

[dependencies]
    console_error_panic_hook = { version = "0.1.6", optional = true }
    wasm-bindgen = {version = "^0.2", features = ["nightly"]}
    js-sys = "0.3.51"
    gloo = "0.2.0"

[dependencies.web-sys]
    version = "0.3.55"
    features = [
        'console',
        'Document',
        'Element',
        'HtmlElement',
        'HtmlButtonElement',
        'Node',
        'Window',
        'CanvasRenderingContext2d',
        'CssStyleDeclaration',
        'EventTarget',
        'HtmlOptionElement',
        'HtmlCanvasElement',
        'HtmlParagraphElement',
        'EventListener',
        'MouseEvent',
    ]

[features]
    default = ["console_error_panic_hook"]

