[package]
    name = "mxyz-client"
    version = "0.1.0"
    authors = ["Vincent C. Mader <vincent@mader.xyz>"]
    edition = "2018"

[lib]
    crate-type = ["cdylib"]

[dependencies]
    console_error_panic_hook = { version = "0.1.6", optional = true }
    getrandom = { version = "0.2", features = ["js"] }
    gloo = "0.2.0"
    js-sys = "0.3.51"
    mxyz-engine = { path="../mxyz-engine" }
    mxyz-utils = { path="../mxyz-utils" }
    rand = "0.8.4"
    wasm-bindgen = { version = "^0.2", features = ["nightly"] }

[dependencies.web-sys]
    version = "0.3.55"
    features = [
        'CanvasRenderingContext2d',
        'CssStyleDeclaration',
        'Document',
        'Element',
        'EventListener',
        'EventTarget',
        'HtmlButtonElement',
        'HtmlCanvasElement',
        'HtmlElement',
        'HtmlOptionElement',
        'HtmlParagraphElement',
        'MouseEvent',
        'Node',
        'Window',
        'console',
    ]

[features]
    default = ["console_error_panic_hook"]
